Fix control panel sections size on smaller screens

--- a/src/subtitulamos/resources/assets/css/control_panel.css
+++ b/src/subtitulamos/resources/assets/css/control_panel.css
@@ -38,6 +38,7 @@
 #control-panel .control-panel-section {
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
 }
 
 #control-panel .control-panel-button {
